--- a/Termostat.ioc
+++ b/Termostat.ioc
@@ -33,30 +33,31 @@ Mcu.Pin11=PB13
 Mcu.Pin12=PB14
 Mcu.Pin13=PB15
 Mcu.Pin14=PC7
-Mcu.Pin15=PA13 (JTMS-SWDIO)
-Mcu.Pin16=PA14 (JTCK-SWCLK)
-Mcu.Pin17=PC10
-Mcu.Pin18=PC11
-Mcu.Pin19=PC12
+Mcu.Pin15=PC8
+Mcu.Pin16=PA13 (JTMS-SWDIO)
+Mcu.Pin17=PA14 (JTCK-SWCLK)
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PH0-OSC_IN (PH0)
-Mcu.Pin20=PB3 (JTDO-TRACESWO)
-Mcu.Pin21=PB4 (NJTRST)
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=PB8
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin20=PC12
+Mcu.Pin21=PB3 (JTDO-TRACESWO)
+Mcu.Pin22=PB4 (NJTRST)
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT (PH1)
+Mcu.Pin30=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -173,6 +174,10 @@ PC4.Locked=true
 PC4.Signal=GPIO_Output
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=OUTPUT_SIG
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PCC.Checker=true
 PCC.Line=STM32L4x6
 PCC.MCU=STM32L476R(C-E-G)Tx
